--- a/sass/components/_events.scss
+++ b/sass/components/_events.scss
@@ -81,6 +81,7 @@
     &--cross-culture{
         background-image: url('../events/img/cross_cultures.png');
         flex: 1;
+        background-position: center center !important;
     }
 
 
