--- a/css/style.css
+++ b/css/style.css
@@ -593,8 +593,8 @@ hr {
   .event--forum {
     background-image: url("../events/img/forum.png");
     flex: 0 0 20%; }
-  .event--trivia-night {
-    background-image: url("../events/img/Trivia Night.png");
+  .event--ball {
+    background-image: url("../events/img/ball.jpg");
     flex: 0 0 25%; }
   .event--summit {
     background-image: url("../events/img/summit-2018.jpg");
