--- a/sass/components/_events.scss
+++ b/sass/components/_events.scss
@@ -70,8 +70,8 @@
         background-image: url('../events/img/forum.png');
         flex: 0 0 20%;
     }
-    &--trivia-night{
-        background-image: url('../events/img/Trivia Night.png');
+    &--ball{
+        background-image: url('../events/img/ball.jpg');
         flex: 0 0 25%;
     }
     &--summit{
