--- a/sass/components/_faculty.scss
+++ b/sass/components/_faculty.scss
@@ -74,22 +74,22 @@
         text-align: center;
     }
 
-    &--arts{
-        background-image: url('../connect/profile_pics_2017/Tom_Ricketts_Zoe_Donnan (Arts).jpg')
-    }
-    &--biomedicine{
-        background-image: url('../connect/profile_pics_2017/Emma_Fletcher_Sam_Chui (Biomedicine).jpg')
-    }
-    &--commerce{
-        background-image: url('../connect/profile_pics_2017/Amanda_Zhou_Tom_Black (Commerce).jpg')
-    }
-    &--design{
-        background-image: url('../connect/profile_pics_2017/Stuart_Yeap_Robert_Doherty (Design).jpg')
-    }
-    &--science{
-        background-image: url('../connect/profile_pics_2017/Isaac_Johnson_Elsa_Gurban (Science).jpg')
-    }
-    &--music{
-        background-image: url('../connect/profile_pics_2017/Beth_Potter_Rebecca_Fullerton(Music).jpg')
-    }
+    // &--arts{
+    //     background-image: url('../connect/profile_pics_2017/Tom_Ricketts_Zoe_Donnan (Arts).jpg')
+    // }
+    // &--biomedicine{
+    //     background-image: url('../connect/profile_pics_2017/Emma_Fletcher_Sam_Chui (Biomedicine).jpg')
+    // }
+    // &--commerce{
+    //     background-image: url('../connect/profile_pics_2017/Amanda_Zhou_Tom_Black (Commerce).jpg')
+    // }
+    // &--design{
+    //     background-image: url('../connect/profile_pics_2017/Stuart_Yeap_Robert_Doherty (Design).jpg')
+    // }
+    // &--science{
+    //     background-image: url('../connect/profile_pics_2017/Isaac_Johnson_Elsa_Gurban (Science).jpg')
+    // }
+    // &--music{
+    //     background-image: url('../connect/profile_pics_2017/Beth_Potter_Rebecca_Fullerton(Music).jpg')
+    // }
 }
