--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,7 @@ hr {
     .committee-carousel__img--missions {
       background-image: url("../connect/profile_pics_2018/ZOE.jpg"); }
     .committee-carousel__img--media {
-      background-image: url("../connect/profile_pics_2018/JAKOB.JPG"); }
+      background-image: url("../connect/profile_pics_2018/JAKOB.jpg"); }
   .committee-carousel__content {
     display: inline-block;
     background: #adc8e5;
