--- a/sass/components/_committee.scss
+++ b/sass/components/_committee.scss
@@ -91,7 +91,7 @@
             background-image: url('../connect/profile_pics_2018/ZOE.jpg');
         }
         &--media{
-            background-image: url('../connect/profile_pics_2018/JAKOB.JPG');
+            background-image: url('../connect/profile_pics_2018/JAKOB.jpg');
         }
     }
 
