--- a/sass/components/_events.scss
+++ b/sass/components/_events.scss
@@ -70,8 +70,8 @@
         background-image: url('../events/img/forum.png');
         flex: 0 0 20%;
     }
-    &--ball{
-        background-image: url('../events/img/ball.jpg');
+    &--cc-camp{
+        background-image: url('https://scontent-sjc3-1.xx.fbcdn.net/v/t1.15752-9/52816662_811740749176007_673707066812006400_n.jpg?_nc_cat=107&_nc_ht=scontent-sjc3-1.xx&oh=137ead046b17bc7a604a424155df35c4&oe=5CE942B6');
         flex: 0 0 25%;
     }
     &--summit{
